--- a/AromaCareGlow.Commerce.Data.MongoWrapper/AromaCareGlow.Commerce.Data.MongoWrapper.csproj
+++ b/AromaCareGlow.Commerce.Data.MongoWrapper/AromaCareGlow.Commerce.Data.MongoWrapper.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.9.3" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.6.0" />
+  </ItemGroup>
+
 </Project>
